feat: 聊天对话样式 BUG 修复